# step

./: .ackrc  .dockerignore  .dockerignore.license  .env  .env.development  .envrc  .gitignore  .pre-commit-config.yaml  .release-commit  .release-it.json  CNAME  Cargo.toml  Cross.toml  Makefile  README.md  REUSE.toml  cross.toml  devenv.nix  devenv.yaml  diff.patch  graphql.schema.json  monitoring_election.sh  notes.txt  rfconfig.yml  tata.txt  toto.json  toto.txt  up
.devcontainer/: .env.development  Dockerfile.keycloak  devcontainer.json  docker-compose-airgap-preparation.yml  docker-compose-base.yml  docker-compose.dev.yml  docker-compose.yml  init-keycloak.sh  initializeCommand.sh  windmill.env
.devcontainer/keycloak/: Dockerfile  quarkus.properties
.devcontainer/localstack/: Dockerfile  setup.sh
.devcontainer/minio/: Dockerfile  certs.json  entrypoint.sh
.devcontainer/openwhisk/: deploy-doc_renderer.sh
.devcontainer/postgresql/: Dockerfile  init.sh  postgresql.conf
.devcontainer/postgresql-b3/: Dockerfile  init-db.sql  init-db.sql.license  init.sh  postgresql.conf
.devcontainer/promtail/: config.yml
.devcontainer/rabbitmq/: rabbitmq.conf
.devcontainer/scripts/: build-sequent-core.sh  build-wasm.sh  config-cli.sh  container-script.sh  devcontainer-script.sh  fix-vscode-settings-nix.sh  format-code.sh  free-space.sh  init-cli.sh  init-wkhtmltopdf.sh  initialize  initialize-command  initialize-command.cmd  initialize-command.ps1  initialize-command.sh  initialize.cmd  initialize.ps1  update-certs.sh  update-graphql.sh  update-keycloak-realms.sh  upload_extension.sh  upload_plugins_s3.sh  upload_plugins_to_s3.sh  vscode-settings.sh
.devcontainer/simplesaml/: authsources.php  saml20-sp-remote.php
.devcontainer/simplesamlphp/: .env  .env.example  000-default.conf  Dockerfile  README.md  config.php  saml20-idp-hosted.php  saml20-sp-remote.php  simplesaml.conf
.devcontainer/tools/: flake.nix
.devcontainer/vault/: Dockerfile  config.hcl  entrypoint.sh  init.sh
.github/: dependabot.yml
.github/cla/: CLA.md  README.md  signatures.json.license
.github/workflows/: ci.yml  (+25 more)
.reuse/: dep5
backend/: Cargo.toml
backend/bulletin-board/: .gitignore  .ort.yml  Cargo.toml  README.md  build.rs  flake.nix  netlify.toml  shell.nix
backend/bulletin-board/.devcontainer/: Dockerfile  devcontainer.json  setup.sh
backend/bulletin-board/.devcontainer/etc/: nix.conf
backend/bulletin-board/.devcontainer/local-deps/: devcontainer.json  setup.sh
backend/bulletin-board/.devcontainer/no-setup/: devcontainer.json  devcontainer.json.license
backend/bulletin-board/.github/workflows/: benchmark.yml  netlify.yml  unit-tests.yml
backend/bulletin-board/.reuse/: dep5
backend/bulletin-board/benches/: README.md  service.rs
backend/bulletin-board/doc/: .gitignore  README.md  babel.config.js  docusaurus.config.js  package.json  protobuf.md.tpl  sidebars.js
backend/bulletin-board/doc/docs/: index.md  index.md.license
backend/bulletin-board/doc/docs/reference/: protobuf.md  reference.md
backend/bulletin-board/doc/docs/reference/architecture/: architecture.md
backend/bulletin-board/doc/docs/tutorials/: tutorials.md
backend/bulletin-board/doc/docs/tutorials/0-get-started/: 0-get-started.md
backend/bulletin-board/doc/docs/tutorials/1-rust-client/: 1-rust-client.md
backend/bulletin-board/doc/src/css/: custom.css
backend/bulletin-board/doc/src/pages/: index.tsx
backend/bulletin-board/doc/static/: .nojekyll
backend/bulletin-board/examples/: README.md  client.rs
backend/bulletin-board/fixtures/: test_permissions_validate.toml
backend/bulletin-board/proto/: bulletin_board.proto
backend/bulletin-board/src/: backend_trillian.rs  board_config.rs  client.rs  entry.rs  error.rs  lib.rs  permissions.rs  proto.rs  service.rs  signature.rs  util.rs
backend/bulletin-board/test_data/example1/: config.json
backend/bulletin-board/trillian-board/: go.mod  go.sum  main.go
backend/bulletin-board/trillian-board/storage/fs/: fs.go  fs_test.go
backend/bulletin-board/trillian-board/storage/webstorage/: fs.go
backend/immu-board/: Cargo.toml
backend/immu-board/src/: board.rs  board_client.rs  lib.rs  util.rs
backend/immudb-rs/: Cargo.toml  build.rs
backend/immudb-rs/src/: client.rs  lib.rs
backend/sequent-core/: Cargo.toml  README.md  flake.nix
backend/sequent-core/browserstack/conf/: local-test.conf.js
backend/sequent-core/fixtures/: ballot.json
backend/sequent-core/src/: ballot.rs  ballot_codec.rs  ballot_verifier.rs  encrypt.rs  plaintext.rs
backend/sequent-core/src/fixtures/: ballot_codec.rs  encrypt.rs
backend/sequent-core/src/wasm/: test.rs  wasm_interpret_plaintext.rs
backend/templates/: .env  Cargo.toml  Dockerfile
backend/templates/src/: connection.rs  hasura.rs  main.rs  pdf.rs  s3.rs
backend/templates/src/graphql/: get_document.graphql  get_election_event.graphql  get_tenant.graphql  insert_document.graphql  insert_scheduled_event.graphql  query.graphql  schema.json  update_election_event_board.graphql
backend/templates/src/hasura/: document.rs  election.rs  election_event.rs  event_execution.rs  mod.rs  scheduled_event.rs  tenant.rs
backend/templates/src/routes/: create_keys.rs  fetch_document.rs  mod.rs  render_report.rs  scheduled_event.rs
backend/templates/src/services/: election_event_board.rs  mod.rs  protocol_manager.rs  worker.rs
backend/templates/src/services/events/: create_board.rs  create_keys.rs  mod.rs  render_report.rs  update_voting_status.rs
constants/: index.ts
docs/: hasura-auth.md  immutable-logs.md  permissions.md  release-flow.md  release-notes.md  system_manual.md  task_execution_model.md  tests.md
frontend/: Dockerfile  package.json
hasura/: .eslintrc.json  .prettierignore  .prettierrc  config.yaml  package.json  sort-yaml-second-level.js
main-preview/: 404.html  index.html  sitemap.xml
scripts/: README.airgapped.md  build-airgapped.sh  clean-pending-applications.sh  e2e-up.sh  generate_voters.py  loc.sh  replacements.sh  restore-init-report.sh  update_license_headers.py
src/: main.rs
(+32369 files in other folders)
