# SPDX-FileCopyrightText: 2023 Eduardo Robles <edu@sequentech.io>
# 
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "backend-services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "=0.5.0-rc.3"