# SPDX-FileCopyrightText: 2023 Eduardo Robles <edu@sequentech.io>
#
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "bulletin-board"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[lib]
bench = false

[features]
build-server = [ "dashmap", "tempfile" ]

# Bin to run the gRPC server
[[bin]]
name = "bulletin-board-server"
path = "src/bin/server.rs"
required-features = [ "build-server" ]

[[bin]]
name = "create-key"
path = "src/bin/create_key.rs"

[dependencies]
# serialization crates
serde_json = "1.0"
serde = { version = "1.0", features = ["std", "serde_derive", "derive", "rc"] }
serde_with = { version = "2.2", features = ["base64"] }
borsh = "0.9"
toml = "0.7"
base64 = "0.21"

# hashing
sha2 = "0.10"

# used for cryptography (public and private keys to verify authentication and
# authorization).
# TODO: Change to using version instead of git when a release is published
strand = { git = "https://github.com/sequentech/strand", features= ["rayon"], tag = "v0.2.0" }

# both anyhow and thiserror serve error handling purposes
thiserror = "1.0"
anyhow = "1.0"

tonic = "0.8"
prost = "0.11"
instant = "0.1"

# rt-multi-thread makes the tonic server multithread out-of-the-box
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }

# Log Tracing
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-tree = "0.2"
tracing-log = "0.1"

# v4 feature lets you generate random UUIDs
uuid = { version = "1.2", features = [ "v4" ] }

# used for improved concurrency in the boards hashmap, recommended by tokio and
# very used/popular
dashmap = { version = "5.4", optional = true }

# used for creating temporal directories/files in tests/benches
tempfile = { version = "3.3", optional = true}

lazy_static = "1.4"

# For validation
regex = "1.7"

# used to process executable arguments
clap = { version = "4.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.8"
serde = { version = "1.0", features= ["std", "serde_derive", "derive", "rc"] }

[dev-dependencies]
# used in cargo bench
criterion = { version = "0.4", features = ["async_tokio", "async_futures"] }

# random number generator, used in tests and benchmark
rand = "0.8"

# used for creating temporal directories/files in tests/benches
tempfile = "3.3"

[[bench]]
name = "service"
harness = false
bench = true
