# SPDX-FileCopyrightText: 2023 Eduardo Robles <edu@sequentech.io>
#
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "immu-board"
version = "0.1.0"
edition = "2021"
authors = [
  "David Ruescas <david@sequentech.io>",
  "Eduardo Robles <edu@sequentech.io>"
]
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
immudb-rs = { path="../immudb-rs" }
tokio = { version = "1.31.0", features = ["rt-multi-thread"]}

# logging 
log = "0.4.17"
tracing = "0.1.37"
tracing-log = { version = "0.1.3" }
tracing-attributes = "0.1.23"
tracing-subscriber = "0.3.16"
tracing-tree = "0.2.1"
tonic = "0.9.2"
hex = "0.4.3"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tonic-build = "0.9"
