# SPDX-FileCopyrightText: 2023 Eduardo Robles <edu@sequentech.io>
#
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "immudb-rs"
version = "0.1.0"
edition = "2021"
authors = [
  "Eduardo Robles <edu@sequentech.io>"
]
license = "AGPL-3.0-only"

[dependencies]
tonic = { version = "0.9.2" }
prost = { version = "0.11.9" }
prost-types = { version = "0.11.9" }
serde = "1.0.152"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tonic-build = "0.9"
