# SPDX-FileCopyrightText: 2022 Felix Robles <felix@sequentech.io>
#
# SPDX-License-Identifier: AGPL-3.0-only
[package]
name = "sequent-core"
version = "0.1.0"
edition = "2021"
authors = [
  "Felix Robles <felix@sequentech.io>"
]
license = "AGPL-3.0-only"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# wasm
wasm-bindgen = {version = "=0.2.79", features = ['serde-serialize'], optional = true}
serde-wasm-bindgen = "0.4"
web-sys = { version = "0.3.4", features = ['Performance'], optional = true}
cfg-if = "1.0"
# signatures
ed25519-dalek = {version = "1", features = ["serde"]}

# time
chrono = "0.4"

# Hashing 
sha2 = "0.9"
# hex
hex = "0.4"
# rust to json schema
schemars = "0.8"
# strand
strand = { git = "https://github.com/sequentech/strand", rev = "fff8dc2bf0544da7101215c14b9883898ca4e7da" }
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
quick-error = "2.0.0"

# error logging
console_error_panic_hook = "0.1.7"

# character mapping for write-ins
phf = { version = "0.11", features = ["macros"], default-features = false }

[features]
wasmtest = ["wasm", "dep:web-sys", "strand/wasmtest"]
wasm = ["wasm-bindgen"]
default = []
